# ttr

./: .gitignore  Concrete.hs  DialogMan.hs  Eval.hs  Exp.cf  JS.hs  LinDialog.hs  Loader.hs  Main.hs  Makefile  Pretty.hs  README.md  TODO.org  TT.hs  TypeChecker.hs  ghcjs.nix  styx.yaml  ttr-mode.el  ttr.cabal
doc/: Kiplingesque.agda  Makefile  ttr.tex
examples/: Booleans.tt  Dialog.tt  Join.tt  Kos.tt  Leibniz.tt  LinDialog.tt  Linearity.tt  Lists.tt  Maybe.tt  Meet.tt  Nats.tt  Perceptron.tt  Props.tt  Reals.tt  Reals.ttr  Rec.tt  Singletons.tt
ghcjs/: nix-boot.sh  pretty-compact.nix  shell.nix
stack/: shell.nix  stack.yaml
tests/fail/: SubRec.tt
