name:                ttr
-- Same version as in Main.hs?
version:             0.1.0
synopsis:            Implementation of a type
homepage:            https://github.com/jyp/ttr
extra-source-files:  Makefile, README.md, Exp.cf, examples/*.cub, cubical.el
license:             GPL3
license-file:        LICENSE
author:              Jean-Philippe Bernardy
maintainer:          jean-philippe.bernrdy@gu.se
category:            Dependent Types
build-type:          Custom
cabal-version:       >=1.10

executable cubical
  main-is:             Main.hs
  other-modules:       Exp.Lex, Exp.Par
  other-extensions:    TupleSections, ParallelListComp, CPP, MagicHash,
                       GeneralizedNewtypeDeriving
  build-depends:       base >= 4.5 && < 5, transformers >= 0.3, mtl >= 2.1,
                       haskeline >= 0.7, directory >= 1.2, array >= 0.4,
                       BNFC >= 2.5, filepath >= 1.3
  build-tools:         alex, happy
  default-language:    Haskell98
  hs-source-dirs:      .
  other-modules:       TT, Concrete, Eval, Pretty, TypeChecker