name:                ttr
version:             0.1.0
synopsis:            Implementation of a type
homepage:            https://github.com/jyp/ttr
extra-source-files:  Exp.cf
license:             GPL
license-file:        LICENSE
author:              Jean-Philippe Bernardy
maintainer:          jean-philippe.bernardy@gu.se
category:            Dependent Types
build-type:          Custom
cabal-version:       >=1.10

executable ttr
  main-is:             Main.hs
  other-modules:       Exp.Lex, Exp.Par
  other-extensions:    TupleSections, ParallelListComp, CPP, MagicHash,
                       GeneralizedNewtypeDeriving
  build-depends:       base >= 4.5 && < 5, transformers >= 0.3, mtl >= 2.1,
                       haskeline >= 0.7, directory >= 1.2, array >= 0.4,
                       BNFC >= 2.5, filepath >= 1.3, pretty-compact, containers, gasp
  build-tools:         alex, happy
  default-language:    Haskell98
  hs-source-dirs:      .
  other-modules:       TT, Concrete, Eval, Pretty, TypeChecker
